--- a/.kres.yaml
+++ b/.kres.yaml
@@ -97,9 +97,7 @@ spec:
     - name: default
       buildxOptions:
         enabled: true
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       conditions:
         - on-pull-request
       steps:
@@ -137,9 +135,7 @@ spec:
     - name: push
       buildxOptions:
         enabled: true
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       conditions:
         - except-pull-request
         - not-on-tag
@@ -164,9 +160,7 @@ spec:
       sops: true
       buildxOptions:
         enabled: true
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       conditions:
         - only-on-tag
       steps:
@@ -226,9 +220,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       steps:
         - name: download-artifacts
           artifactStep:
@@ -249,9 +241,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       steps:
         - name: download-artifacts
           artifactStep:
@@ -265,9 +255,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 7 * * *'
       steps:
@@ -287,9 +275,7 @@ spec:
     - name: e2e-iso
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       steps:
         - name: download-artifacts
           artifactStep:
@@ -314,9 +300,7 @@ spec:
     - name: e2e-qemu-short
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       steps:
         - name: download-artifacts
           artifactStep:
@@ -343,9 +327,7 @@ spec:
     - name: e2e-docker-short
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       steps:
         - name: download-artifacts
           artifactStep:
@@ -373,9 +355,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -428,9 +408,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -499,9 +477,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -553,9 +529,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -622,9 +596,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -695,9 +667,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -770,9 +740,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -834,9 +802,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -886,9 +852,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -938,9 +902,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1024,9 +986,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1115,9 +1075,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1222,9 +1180,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1345,9 +1301,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1415,9 +1369,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1506,9 +1458,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1595,9 +1545,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1709,9 +1657,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 6 * * *'
       triggerLabels:
@@ -1793,9 +1739,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -1874,9 +1818,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -1930,9 +1872,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -1996,9 +1936,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -2063,9 +2001,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -2159,9 +2095,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -2227,9 +2161,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # this is pretty fast, so we can use generic
+      runnerGroup: generic # this is pretty fast, so we can use generic
       crons:
         - '30 2 * * *'
       triggerLabels:
@@ -2266,9 +2198,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 2 * * *'
       triggerLabels:
@@ -2294,9 +2224,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # this is not compute intensive, so we can use generic
+      runnerGroup: generic # this is not compute intensive, so we can use generic
       triggerLabels:
         - integration/cloud-images
       steps:
@@ -2328,9 +2256,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 2 * * *'
       triggerLabels:
@@ -2395,9 +2321,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 6 * * *'
       triggerLabels:
@@ -2526,9 +2450,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
@@ -2604,9 +2526,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
@@ -2703,9 +2623,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
@@ -2802,9 +2720,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
@@ -2899,9 +2815,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
@@ -2996,9 +2910,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
