--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,6 +19,7 @@ preface = """
         title = "Component Updates"
         description = """\
 runc: 1.3.1
+Kubernetes: 1.34.1
 
 Talos is built with Go 1.24.6.
 """
