feat: enforce more KSPP and hardening sysctls
Source: https://github.com/a13xp0p0v/kernel-hardening-checker/blob/76821aabeb62a9bf4130bae65d467ca2561bebd5/kernel_hardening_checker/checks.py

Filter some sysctls (if we don't need them because of kernel config), or
try not to break things too much.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -55,6 +55,13 @@ Signed PCR policies will still be bound to PCR 11.
 The currently used PCR's can be seen with `talosctl get volumestatus <volume> -o yaml` command.
 """
 
+    [notes.kspp]
+        title = "Kernel Security Posture Profile (KSPP)"
+        description = """\
+Talos now enables a stricter set of KSPP sysctl settings by default.
+The list of overridden settings is available with `talosctl get kernelparamstatus` command.
+"""
+
 [make_deps]
 
     [make_deps.tools]
