feat: implement link configuration
New multi-doc way to apply static configuration to network links.

Fixes #10957

Also implements related changes:

* new-style auto-DHCP mode - run DHCP as long as there is no new-style
  config document
* refactoring of controllers/tests which were touched in this PR
* implemented embedded config structs handling in docgen -> Markdown and
  docgen -> JSON schema

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/integration/cli/testdata/patches/delete-dummy-ap.yaml
+++ b/internal/integration/cli/testdata/patches/delete-dummy-ap.yaml
@@ -1,6 +1,5 @@
 ---
-machine:
-  network:
-    interfaces:
-      - interface: dummy-ap-patch
-        $patch: delete
+apiVersion: v1alpha1
+kind: DummyLinkConfig
+name: dummy-ap-patch
+$patch: delete
